update icon: Nationwide

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -75,6 +75,7 @@
 	<item drawable="xed_editor" />
 	<item drawable="zorg_messenger" />
 	<item drawable="zvuk" />
+	<item drawable="nationwide" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -396,6 +397,7 @@
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
 	<item drawable="nagram_niello" />
+	<item drawable="nationwide_alt_1" />
 	<item drawable="neko_alt_1" />
 	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
