--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13700,7 +13700,7 @@
 	<item component="ComponentInfo{io.netool.app/io.netool.app.MainActivity}" drawable="netool_lite" />
 	<item component="ComponentInfo{com.rewardstyle.liketoknowit/com.rewardstyle.liketoknowit.SplashActivity}" drawable="ltk" />
 	<item component="ComponentInfo{com.rockstargames.gtalcs/com.rockstargames.gtalcs.BootGameActivity}" drawable="gta_liberty_city_stories" />
-	<item component="ComponentInfo{taxi.android.client/com.mytaxi.passenger.startup.impl.ui.RouterActivity}" drawable="free_now_driver" />
+	<item component="ComponentInfo{taxi.android.client/com.mytaxi.passenger.startup.impl.ui.RouterActivity}" drawable="freenow" />
 	<item component="ComponentInfo{com.pickery.app/com.flink.consumer.feature.splash.LauncherSplashActivity}" drawable="flink" />
 	<item component="ComponentInfo{com.w2sv.filenavigator/com.w2sv.filenavigator.MainActivity}" drawable="file_navigator" />
 	<item component="ComponentInfo{peterfajdiga.fastdraw/peterfajdiga.fastdraw.activities.SettingsActivity}" drawable="fast_draw_preferences" />
@@ -13751,7 +13751,6 @@
 	<item component="ComponentInfo{com.prayerly.app/com.prayerly.app.MainActivity}" drawable="prayerly" />
 	<item component="ComponentInfo{ai.perplexity.app.android/ai.perplexity.app.android.ui.main.MainActivity}" drawable="perplexity" />
 	<item component="ComponentInfo{com.paytm.business/com.paytm.business.splash.SplashActivity}" drawable="pay_tm_for_business" />
-	<item component="ComponentInfo{com.pagopopmobile/com.pagopopmobile.MainActivity}" drawable="oxxo" />
 	<item component="ComponentInfo{org.owntracks.android/org.owntracks.android.ui.map.MapActivity}" drawable="owntracks" />
 	<item component="ComponentInfo{org.unifiedpush.distributor.nextpush/org.unifiedpush.distributor.nextpush.activities.StartActivity}" drawable="nextpush" />
 	<item component="ComponentInfo{it.danieleverducci.nextcloudmaps/it.danieleverducci.nextcloudmaps.activity.login.LoginActivity}" drawable="nextcloud_maps" />
