--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -39,7 +39,6 @@
 	<item drawable="medtimer" />
 	<item drawable="mijndsw" />
 	<item drawable="ms_designer" />
-	<item drawable="ms_designer_alt_1" />
 	<item drawable="mygarden" />
 	<item drawable="neer" />
 	<item drawable="netool_lite" />
@@ -76,6 +75,7 @@
 	<item drawable="xed_editor" />
 	<item drawable="zorg_messenger" />
 	<item drawable="zvuk" />
+	<item drawable="nationwide" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -377,7 +377,6 @@
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
-	<item drawable="ms_designer_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
 	<item drawable="mupdf_alt_1" />
@@ -398,6 +397,7 @@
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
 	<item drawable="nagram_niello" />
+	<item drawable="nationwide_alt_1" />
 	<item drawable="neko_alt_1" />
 	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
