--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12622,7 +12622,7 @@
 	<item component="ComponentInfo{com.vertumus.cryten/com.vertumus.cryten.activities.SplashActivity}" drawable="cryten" />
 	<item component="ComponentInfo{ch.ethz.im.codecheck/info.codecheck.android.ui.SplashActivity}" drawable="codecheck" />
 	<item component="ComponentInfo{ch.origin.cocoonweaver/ch.origin.cocoonweaver.main.MainActivity}" drawable="cocoonweaver" />
-	<item component="ComponentInfo{io.cozy.flagship.mobile/io.cozy.flagship.mobile.MainActivitycozy}" drawable="cloud_personnel_cozy" />
+	<item component="ComponentInfo{io.cozy.flagship.mobile/io.cozy.flagship.mobile.MainActivitybase}" drawable="cloud_personnel_cozy" />
 	<item component="ComponentInfo{com.clearme.clearapp/com.clearme.clearapp.splashscreen.SplashScreenActivity}" drawable="clear" />
 	<item component="ComponentInfo{com.budget.tracker_app/com.budget.tracker_app.MainActivity}" drawable="cashew" />
 	<item component="ComponentInfo{advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.SplashScreenActivity}" drawable="calces" />
