fix: "Crédit Agricole/Ma Banque" app ComponentInfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9632,7 +9632,7 @@
 	<item component="ComponentInfo{fr.bouyguestelecom.ecm.android/fr.bouyguestelecom.ecm.android.SplashActivity}" drawable="espace_client" />
 	<item component="ComponentInfo{fr.chenry.android.freshrss/fr.chenry.android.freshrss.activities.StartActivity}" drawable="freshrss" />
 	<item component="ComponentInfo{fr.cnamts.it.activity/fr.cnamts.it.activity.LoginActivity}" drawable="ameli" />
-	<item component="ComponentInfo{fr.creditagricole.androidapp/fr.creditagricole.androidapp.activities.identification.ConnectionActivity}" drawable="ca_twentyfour" />
+	<item component="ComponentInfo{fr.creditagricole.androidapp/fr.ca.cats.nmb.start.StartActivity}" drawable="credit_agricole" />
 	<item component="ComponentInfo{fr.creditagricole.cats.maprotection.lcl/fr.creditagricole.cats.maprotection.ui.SplashActivity}" drawable="lcl_ma_protection_maison" />
 	<item component="ComponentInfo{fr.debal.app/fr.debal.app.MainActivity}" drawable="debal" />
 	<item component="ComponentInfo{fr.doctolib.www/fr.doctolib.www.MainActivity}" drawable="doctolib" />
