--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10944,7 +10944,7 @@
 	<item component="ComponentInfo{org.piwik.mobile2/org.piwik.mobile2.MatomoMobile2Activity}" drawable="matomo" />
 	<item component="ComponentInfo{org.pixeldroid.app/org.pixeldroid.app.MainActivity}" drawable="pixeldroid" />
 	<item component="ComponentInfo{org.pixelrush.moneyiq/org.pixelrush.moneyiq.ActivityMoneyIQ}" drawable="_1money" />
-	<item component="ComponentInfo{org.plantnet/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="plantnet" />
+	<item component="ComponentInfo{org.plantnet/org.plantnet.MainActivity}" drawable="plantnet" />
 	<item component="ComponentInfo{org.pocketcampus.pchsr/org.pocketcampus.plugin.dashboard.android.DashboardMainActivity}" drawable="ost_rj" />
 	<item component="ComponentInfo{org.pocketworkstation.pckeyboard/org.pocketworkstation.pckeyboard.Main}" drawable="hackers_keyboard" />
 	<item component="ComponentInfo{org.polymorphicshade.newpipe/org.schabi.newpipe.MainActivity}" drawable="tubular" />
