fix: "SNCF Connect" app drawable

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8599,7 +8599,7 @@
 	<item component="ComponentInfo{com.vsco.cam/com.vsco.cam.navigation.LithiumActivity}" drawable="vsco_cam" />
 	<item component="ComponentInfo{com.vsco.cam/com.vsco.cam.navigation.NavigationBaseActivity}" drawable="vsco_cam" />
 	<item component="ComponentInfo{com.vsco.cam/com.vsco.cam.SplashActivity}" drawable="vsco_cam" />
-	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.evoyageurs.invictus.flutter.MainActivity}" drawable="ouisncf" />
+	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.evoyageurs.invictus.flutter.MainActivity}" drawable="sncfconnect" />
 	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.vsct.vsc.mobile.horaireetresa.android.activity.SplashActivity}" drawable="sncfconnect" />
 	<item component="ComponentInfo{com.vtosters.android/com.vtosters.android.VTIconDefault}" drawable="vtosters" />
 	<item component="ComponentInfo{com.vtosters.android/com.vtosters.android.VTIconVK}" drawable="vkontakte" />
