--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -173,6 +173,7 @@
 	<item component="ComponentInfo{air.uk.co.bbc.android.mediaplayer/air.uk.co.bbc.android.mediaplayer.AppEntry}" drawable="bbc_media_player" />
 	<item component="ComponentInfo{air.WatchESPN/com.espn.watchespn.main.Main}" drawable="espn" />
 	<item component="ComponentInfo{ak.alizandro.smartaudiobookplayer/ak.alizandro.smartaudiobookplayer.PlayerActivity}" drawable="audiobook" />
+	<item component="ComponentInfo{akylas.alpi.maps/com.tns.NativeScriptActivity}" drawable="alpi_maps" />
 	<item component="ComponentInfo{akylas.alpi.maps/akylas.alpi.maps.MainActivity}" drawable="alpi_maps" />
 	<item component="ComponentInfo{albums.gallery.photo.folder.picasa.app.web.gallery/albums.gallery.photo.folder.picasa.app.web.gallery.activities.SplashActivity}" drawable="gallery" />
 	<item component="ComponentInfo{alexcrusher.just6weeks.full/alexcrusher.just6weeks.lib.activities.MainActivity}" drawable="just_six_weeks" />
@@ -3601,6 +3602,7 @@
 	<item component="ComponentInfo{com.google.android.contacts/com.android.contacts.activities.PeopleActivity}" drawable="contacts" />
 	<item component="ComponentInfo{com.google.android.deskclock/com.android.deskclock.DeskClock}" drawable="clock" />
 	<item component="ComponentInfo{com.google.android.dialer/com.google.android.dialer.extensions.GoogleDialtactsActivity}" drawable="phone" />
+	<item component="ComponentInfo{com.google.android.diskusage/com.google.android.diskusage.SelectActivity}" drawable="diskusage" />
 	<item component="ComponentInfo{com.google.android.diskusage/com.google.android.diskusage.ui.SelectActivity}" drawable="diskusage" />
 	<item component="ComponentInfo{com.google.android.documentsui/com.android.documentsui.LauncherActivity}" drawable="google_files" />
 	<item component="ComponentInfo{com.google.android.email/com.android.email.activity.Welcome}" drawable="aosp_mail" />
@@ -9632,6 +9634,7 @@
 	<item component="ComponentInfo{fr.bouyguestelecom.ecm.android/fr.bouyguestelecom.ecm.android.SplashActivity}" drawable="espace_client" />
 	<item component="ComponentInfo{fr.chenry.android.freshrss/fr.chenry.android.freshrss.activities.StartActivity}" drawable="freshrss" />
 	<item component="ComponentInfo{fr.cnamts.it.activity/fr.cnamts.it.activity.LoginActivity}" drawable="ameli" />
+	<item component="ComponentInfo{fr.creditagricole.androidapp/fr.creditagricole.androidapp.activities.identification.ConnectionActivity}" drawable="ca_twentyfour" />
 	<item component="ComponentInfo{fr.creditagricole.androidapp/fr.ca.cats.nmb.start.StartActivity}" drawable="credit_agricole" />
 	<item component="ComponentInfo{fr.creditagricole.cats.maprotection.lcl/fr.creditagricole.cats.maprotection.ui.SplashActivity}" drawable="lcl_ma_protection_maison" />
 	<item component="ComponentInfo{fr.debal.app/fr.debal.app.MainActivity}" drawable="debal" />
@@ -10944,6 +10947,7 @@
 	<item component="ComponentInfo{org.piwik.mobile2/org.piwik.mobile2.MatomoMobile2Activity}" drawable="matomo" />
 	<item component="ComponentInfo{org.pixeldroid.app/org.pixeldroid.app.MainActivity}" drawable="pixeldroid" />
 	<item component="ComponentInfo{org.pixelrush.moneyiq/org.pixelrush.moneyiq.ActivityMoneyIQ}" drawable="_1money" />
+	<item component="ComponentInfo{org.plantnet/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="plantnet" />
 	<item component="ComponentInfo{org.plantnet/org.plantnet.MainActivity}" drawable="plantnet" />
 	<item component="ComponentInfo{org.pocketcampus.pchsr/org.pocketcampus.plugin.dashboard.android.DashboardMainActivity}" drawable="ost_rj" />
 	<item component="ComponentInfo{org.pocketworkstation.pckeyboard/org.pocketworkstation.pckeyboard.Main}" drawable="hackers_keyboard" />
@@ -12622,6 +12626,7 @@
 	<item component="ComponentInfo{com.vertumus.cryten/com.vertumus.cryten.activities.SplashActivity}" drawable="cryten" />
 	<item component="ComponentInfo{ch.ethz.im.codecheck/info.codecheck.android.ui.SplashActivity}" drawable="codecheck" />
 	<item component="ComponentInfo{ch.origin.cocoonweaver/ch.origin.cocoonweaver.main.MainActivity}" drawable="cocoonweaver" />
+	<item component="ComponentInfo{io.cozy.flagship.mobile/io.cozy.flagship.mobile.MainActivitycozy}" drawable="cloud_personnel_cozy" />
 	<item component="ComponentInfo{io.cozy.flagship.mobile/io.cozy.flagship.mobile.MainActivitybase}" drawable="cloud_personnel_cozy" />
 	<item component="ComponentInfo{com.clearme.clearapp/com.clearme.clearapp.splashscreen.SplashScreenActivity}" drawable="clear" />
 	<item component="ComponentInfo{com.budget.tracker_app/com.budget.tracker_app.MainActivity}" drawable="cashew" />
