add & update icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -96,6 +96,7 @@
 	<item drawable="xed_editor" />
 	<item drawable="zorg_messenger" />
 	<item drawable="zvuk" />
+	<item drawable="chrono_foss" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -185,6 +186,7 @@
 	<item drawable="chrome_alt_2" />
 	<item drawable="chrome_canary_alt_1" />
 	<item drawable="chromium_alt_1" />
+	<item drawable="chrono_foss_alt_1" />
 	<item drawable="cibc_alt_1" />
 	<item drawable="classicboy_alt_1" />
 	<item drawable="clicker_heroes_alt_1" />
