--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13834,4 +13834,5 @@
 	<item component="ComponentInfo{tech.laihz.alga/tech.laihz.alga.MainActivity}" drawable="alga" />
 	<item component="ComponentInfo{com.infoarabmedia.almashhad/com.infoarabmediaapp.MainActivity}" drawable="al_mashhad" />
 	<item component="ComponentInfo{com.formagrid.airtable/com.formagrid.airtable.activity.session.SessionLoaderActivity}" drawable="airtable" />
+	<item component="ComponentInfo{org.nekomanga.neko/eu.kanade.tachiyomi.ui.main.MainActivity}" drawable="neko" />
 </resources>
