--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -128,6 +128,7 @@
 	<item drawable="xed_editor" />
 	<item drawable="zorg_messenger" />
 	<item drawable="zvuk" />
+	<item drawable="neko" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -452,6 +453,7 @@
 	<item drawable="nagram_niello" />
 	<item drawable="nationwide_alt_1" />
 	<item drawable="neko_alt_1" />
+	<item drawable="neko_alt_2" />
 	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
 	<item drawable="neo_backup_alt_2" />
