--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -261,6 +261,11 @@
         image="https://avatars.githubusercontent.com/u/43035773"
         link="https://github.com/zhon12345" />
     <contributor
+        name="Npepperlinux"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/66727014"
+        link="https://github.com/Npepperlinux" />
+    <contributor
         name="Otemachi"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/36190635"
