update icon: Immich

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -31,6 +31,7 @@
 	<item drawable="todopad" />
 	<item drawable="touch_the_notch" />
 	<item drawable="xpensor" />
+	<item drawable="immich" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -245,6 +246,7 @@
 	<item drawable="icon_pusher_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="image_toolbox_alt_1" />
+	<item drawable="immich_alt_1" />
 	<item drawable="inbrowser_alt_1" />
 	<item drawable="indrive_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
