--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13877,7 +13877,7 @@
 	<item component="ComponentInfo{jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.MainActivity}" drawable="mister_donut" />
 	<item component="ComponentInfo{info.shiosyakeyakini.miria/info.shiosyakeyakini.miria.MainActivity}" drawable="miria" />
 	<item component="ComponentInfo{jp.dreambrain.adiorama/com.cognizantorderserv.kfcindiadroid.MainActivity}" drawable="kfc" />
-	<item component="ComponentInfo{com.access_company.android.sh_jumpplus/giga.app.MainActivity}" drawable="jump_plus" />
+	<item component="ComponentInfo{com.access_company.android.sh_jumpplus/giga.app.MainActivity}" drawable="shonen_jump_plus" />
 	<item component="ComponentInfo{at.techbee.jtx/at.techbee.jtx.MainActivity2}" drawable="jtx" />
 	<item component="ComponentInfo{com.android.gpstest.osmdroid/com.android.gpstest.ui.MainActivity}" drawable="gpstest" />
 	<item component="ComponentInfo{io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity}" drawable="gog" />
