--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13883,4 +13883,5 @@
 	<item component="ComponentInfo{io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity}" drawable="gog" />
 	<item component="ComponentInfo{io.hashport.hashwallet/io.hashport.hashwallet.MainActivity}" drawable="expo_wallet" />
 	<item component="ComponentInfo{au.gov.ato.ATOTax/crc6476df41b255b25334.MainActivity}" drawable="ato" />
+	<item component="ComponentInfo{com.thehcj.quacker/com.thehcj.quacker.MainActivity}" drawable="quacker" />
 </resources>
