--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -40,6 +40,7 @@
 	<item drawable="xpensor" />
 	<item drawable="yahoo_japan_transit" />
 	<item drawable="youi" />
+	<item drawable="quacker" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -452,6 +453,7 @@
 	<item drawable="procam_x_alt_1" />
 	<item drawable="proton_mail_alt_1" />
 	<item drawable="proton_vpn_alt_1" />
+	<item drawable="quacker_alt_1" />
 	<item drawable="quoda_alt_1" />
 	<item drawable="raindrop_alt_1" />
 	<item drawable="rankey_alt_1" />
