--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -100,6 +100,7 @@
 	<item drawable="zepto" />
 	<item drawable="ziraat_mobile" />
 	<item drawable="znanylekarz" />
+	<item drawable="aves_gallery" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -155,6 +156,7 @@
 	<item drawable="aurora_droid_alt_1" />
 	<item drawable="auxio_alt_1" />
 	<item drawable="aves_gallery_alt_1" />
+	<item drawable="aves_gallery_alt_2" />
 	<item drawable="badoo_alt_1" />
 	<item drawable="bang_dream_alt_1" />
 	<item drawable="basic_call_recorder_alt_1" />
