new icons: Tinkoff (and updates for existing ones)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,9 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="tinkoff" />
+	<item drawable="tinkoff_invest" />
+	<item drawable="tinkoff_mobile" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -866,9 +869,12 @@
 	<item drawable="tim_hortons_alt_1" />
 	<item drawable="tinkoff_alt_1" />
 	<item drawable="tinkoff_alt_2" />
+	<item drawable="tinkoff_alt_3" />
 	<item drawable="tinkoff_invest_alt_1" />
+	<item drawable="tinkoff_invest_alt_2" />
 	<item drawable="tinkoff_junior_alt_1" />
 	<item drawable="tinkoff_mobile_alt_1" />
+	<item drawable="tinkoff_mobile_alt_2" />
 	<item drawable="tiny_weather_forecast_germany_alt_1" />
 	<item drawable="todoist_amethyst" />
 	<item drawable="todoist_blueberry" />
