--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13591,7 +13591,7 @@
 	<item component="ComponentInfo{com.arrow.wallpapers.pastelwall/com.arrow.wallpapers.pastelwall.activity.SplashScreen}" drawable="pastel_wallpapers" />
 	<item component="ComponentInfo{com.app.openlib/com.app.openlib.MainActivity}" drawable="openlib" />
 	<item component="ComponentInfo{com.k2fsa.sherpa.onnx.tts.engine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity}" drawable="sherpa_tts" />
-	<item component="ComponentInfo{its.madruga.wpp/its.madruga.wpp.MainActivity}" drawable="mdgwa" />
+	<item component="ComponentInfo{its.madruga.wpp/its.madruga.wpp.MainActivity}" drawable="wa_mods" />
 	<item component="ComponentInfo{com.arlosoft.macrodroid.xiaomiwifihelper/com.arlosoft.macrodroid.xiaomiwifihelper.ui.ConfigureActivity}" drawable="md_xiaomi_helper" />
 	<item component="ComponentInfo{menloseweight.loseweightappformen.weightlossformen/menloseweight.loseweightappformen.weightlossformen.activity.SplashActivity}" drawable="lose_weight_app_for_men" />
 	<item component="ComponentInfo{com.jjewuz.justweather/com.jjewuz.justweather.MainActivity}" drawable="just_weather" />
