--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,8 @@
 	<item drawable="tinkoff" />
 	<item drawable="tinkoff_invest" />
 	<item drawable="tinkoff_mobile" />
+	<item drawable="microg" />
+	<item drawable="microg_settings" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -291,6 +293,8 @@
 	<item drawable="messenger_lite_alt_1" />
 	<item drawable="mi_movistar_alt_1" />
 	<item drawable="mi_security_alt_1" />
+	<item drawable="microg_alt_1" />
+	<item drawable="microg_settings_alt_1" />
 	<item drawable="microsoft_auth_alt_1" />
 	<item drawable="microsoft_azure_alt_1" />
 	<item drawable="microsoft_bing_alt_1" />
@@ -5958,7 +5962,6 @@
 	<item drawable="md_xiaomi_helper" />
 	<item drawable="mdcalc" />
 	<item drawable="mdgramyou" />
-	<item drawable="mdgwa" />
 	<item drawable="me_at_walmart" />
 	<item drawable="means_tv" />
 	<item drawable="medal_tv" />
@@ -9720,6 +9723,7 @@
 	<item drawable="vysor" />
 
 	<category title="W" />
+	<item drawable="wa_mods" />
 	<item drawable="wa_tweaker" />
 	<item drawable="wabbitemu" />
 	<item drawable="wadb" />
