--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -34,6 +34,7 @@
 	<item drawable="tinkoff_mobile" />
 	<item drawable="tinkoff_work" />
 	<item drawable="varsity" />
+	<item drawable="washington_post" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -986,6 +987,7 @@
 	<item drawable="waking_up_alt_1" />
 	<item drawable="wall_you_alt_1" />
 	<item drawable="walli_alt_1" />
+	<item drawable="washington_post_alt_1" />
 	<item drawable="wawa_alt_1" />
 	<item drawable="waze_alt_1" />
 	<item drawable="western_union_send_money_alt_1" />
