--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8894,7 +8894,7 @@
 	<item component="ComponentInfo{com.YoStarEN.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.YoStarEN.AzurLane/com.manjuu.azurlane.PrePermissionActivity}" drawable="azur_lane" />
 	<item component="ComponentInfo{com.YoStarJP.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
-	<item component="ComponentInfo{com.YoStarJP.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
+	<item component="ComponentInfo{com.YoStarJP.AzurLane/com.manjuu.azurlane.PrePermissionActivity}" drawable="azur_lane" />
 	<item component="ComponentInfo{com.YostarJP.BlueArchive/com.yostarjp.bluearchive.MxUnityPlayerActivity}" drawable="blue_archive" />
 	<item component="ComponentInfo{com.YoStarKR.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.youdao.hindict/com.youdao.hindict.activity.MainActivity}" drawable="u_dictionary" />
