add telegram channel, follow us!

--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -299,6 +299,7 @@
         <item>https://delta-icons.github.io</item>
         <item>delta.iconpack@gmail.com</item>
         <item>https://discord.gg/F9RFqHN</item>
+        <item>https://t.me/deltaicons</item>
     </string-array>
 
     <!-- Contributors dialog
