--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -64,6 +64,7 @@
 	<item drawable="varsity" />
 	<item drawable="washington_post" />
 	<item drawable="zandaka_kakunin" />
+	<item drawable="myfastweb" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -382,6 +383,7 @@
 	<item drawable="music_alt_4" />
 	<item drawable="music_alt_5" />
 	<item drawable="musify_alt_1" />
+	<item drawable="myfastweb_alt_1" />
 	<item drawable="mysplash_alt_1" />
 	<item drawable="mysplash_alt_2" />
 	<item drawable="n_plus_launcher_alt_1" />
