--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -108,6 +108,7 @@
 	<item drawable="varsity" />
 	<item drawable="washington_post" />
 	<item drawable="zandaka_kakunin" />
+	<item drawable="tutanota" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1043,6 +1044,7 @@
 	<item drawable="tunity_alt_1" />
 	<item drawable="turbo_dismount_alt_1" />
 	<item drawable="tusky_alt_1" />
+	<item drawable="tutanota_alt_1" />
 	<item drawable="twitch_alt_1" />
 	<item drawable="twitter_alt_1" />
 	<item drawable="twitter_alt_2" />
