Add a componentInfo for dealabs

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2453,6 +2453,7 @@
 	<item component="ComponentInfo{com.dd.doordash/com.doordash.consumer.ui.login.LauncherActivity}" drawable="doordash" />
 	<item component="ComponentInfo{com.ddpa.mobileapp/com.ddpa.mobileapp.MainActivity}" drawable="delta_dental" />
 	<item component="ComponentInfo{com.dealabs.apps.android/com.pepper.apps.android.presentation.MainActivity}" drawable="dealabs" />
+	<item component="ComponentInfo{com.dealabs.apps.android/com.pepper.apps.android.presentation.MainActivityDarkIcon}" drawable="dealabs" />
 	<item component="ComponentInfo{com.deananddavid.android/com.deananddavid.android.SplashActivity}" drawable="deananddavid" />
 	<item component="ComponentInfo{com.deananddavid.android/com.usemenu.MenuAndroidApplication.SplashActivity}" drawable="deananddavid" />
 	<item component="ComponentInfo{com.decathlon.app/com.decathlon.app.splash.ActivitySplash}" drawable="decathlon_international" />
