--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="battery_guru" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -63,6 +64,7 @@
 	<item drawable="badoo_alt_1" />
 	<item drawable="bang_dream_alt_1" />
 	<item drawable="basic_call_recorder_alt_1" />
+	<item drawable="battery_guru_alt_1" />
 	<item drawable="bilibili_alt_1" />
 	<item drawable="binance_alt_1" />
 	<item drawable="binary_eye_alt_1" />
