New icons and ComponentInfos
Added icons for CIRA Canadian Shield, CityNews, DC-OT Campus Rec, Durham Region Waste, FreshCo, ResidentPortal, and Transit (Manifesto alt). Redid KFC icon and updated MuPDF icon. Added ComponentInfo for Teracube Recorder and updated ComponentInfo for KFC, Boost, CBC Listen, Countdown Widget, and Hashi (Bridges).

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14244,4 +14244,17 @@
 	<item component="ComponentInfo{com.tomclaw.appsend/com.tomclaw.appsend.screen.home.HomeActivity}" drawable="appteka" />
 	<item component="ComponentInfo{com.andannn.aniflow/com.andannn.aniflow.MainActivity}" drawable="aniflow" />
 	<item component="ComponentInfo{moe.emi.aluminium/moe.emi.aluminium.MainActivity}" drawable="aluminium" />
+	<item component="ComponentInfo{com.mobolize.cira.shield/com.mobophiles.cacheengine.vpn.VpnSimpleCacheFrontActivity}" drawable="cira_canadian_shield" />
+	<item component="ComponentInfo{com.rogers.news680/com.rogers.citynews.ui.main.MainActivity}" drawable="city_news" />
+	<item component="ComponentInfo{com.innosoftfusiongo.durhamcollege/com.innosoftfusiongo.durhamcollege.DurhamcollegeSplashActivity}" drawable="dc_ot_campus_recreation" />
+	<item component="ComponentInfo{net.recollect.durham/crc64362b993fa7fc4f1f.SplashActivity}" drawable="durham_waste" />
+	<item component="ComponentInfo{com.freshco.app/com.sobeys.ui.splash.SplashActivity}" drawable="freshco" />
+	<item component="ComponentInfo{com.kineticcafe.kfccolonelsclub/com.cognizantorderserv.kfcindiadroid.MainActivity}" drawable="kfc" />
+	<item component="ComponentInfo{com.psi.residentportal/com.psi.residentportal.modules.splashscreen.view.SplashScreenActivity}" drawable="resident_portal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityiconmanifesto}" drawable="transit_manifesto" />
+	<item component="ComponentInfo{com.compass_canada.boost/com.compassCan.core_eng_apps.MainActivity}" drawable="boost_ordering"/>
+	<item component="ComponentInfo{com.nobexinc.cbcradio.rc/cbcradio.ca.listenandroid.app_v2.MainActivity}" drawable="cbc_listen"/>
+	<item component="ComponentInfo{me.gira.widget.countdown/me.gira.widget.countdown.activities.SplashActivity}" drawable="countdown_widget"/>
+	<item component="ComponentInfo{ch.aorlinn.bridges/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity}" drawable="hashi_bridges"/>
+	<item component="ComponentInfo{com.teracube.recorder/com.teracube.recorder.RecorderActivity}" drawable="sound_recorder" />
 </resources>
