--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,19 +8,28 @@
 	<item drawable="aniflow" />
 	<item drawable="audiofy" />
 	<item drawable="bikesharinghub" />
+	<item drawable="cira_canadian_shield" />
+	<item drawable="city_news" />
+	<item drawable="dc_ot_campus_recreation" />
+	<item drawable="durham_waste" />
 	<item drawable="desygner" />
 	<item drawable="divineko" />
+	<item drawable="freshco" />
 	<item drawable="glassdown" />
 	<item drawable="gohenry" />
 	<item drawable="gpt_box" />
 	<item drawable="gptmobile" />
+	<item drawable="kfc" />
 	<item drawable="lime3ds" />
+	<item drawable="mupdf" />
 	<item drawable="my_benefits" />
 	<item drawable="ollama" />
 	<item drawable="plexus" />
+	<item drawable="resident_portal" />
 	<item drawable="rootactivitylauncher" />
 	<item drawable="serverbox" />
 	<item drawable="shizutools" />
+	<item drawable="transit_manifesto" />
 	<item drawable="wifilist" />
 
 	<category title="Alts" />
@@ -261,6 +270,7 @@
 	<item drawable="joplin_alt_1" />
 	<item drawable="junior_hockey_league_alt_1" />
 	<item drawable="just_dance_controller_alt_1" />
+	<item drawable="kfc_alt_1" />
 	<item drawable="k_nine_mail_alt_1" />
 	<item drawable="keep_talking_and_nobody_explodes_alt_1" />
 	<item drawable="khan_academy_alt_1" />
@@ -337,6 +347,7 @@
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
 	<item drawable="mupdf_alt_1" />
+	<item drawable="mupdf_alt_2" />
 	<item drawable="music_alt_1" />
 	<item drawable="music_alt_2" />
 	<item drawable="music_alt_3" />
@@ -936,6 +947,7 @@
 	<item drawable="transit_light_blue" />
 	<item drawable="transit_light_blue_2" />
 	<item drawable="transit_light_teal" />
+	<item drawable="transit_manifesto" />
 	<item drawable="transit_neon" />
 	<item drawable="transit_orange" />
 	<item drawable="transit_orange_2" />
@@ -3245,6 +3257,7 @@
 	<item drawable="cinemaxx" />
 	<item drawable="cinepolis" />
 	<item drawable="cineworld_cinemas" />
+	<item drawable="cira_canadian_shield" />
 	<item drawable="circle_k" />
 	<item drawable="circles" />
 	<item drawable="circles_life" />
@@ -3262,6 +3275,7 @@
 	<item drawable="citizens_bank" />
 	<item drawable="citra" />
 	<item drawable="cittamobi" />
+	<item drawable="city_news" />
 	<item drawable="citymapper" />
 	<item drawable="citymobil" />
 	<item drawable="clash" />
@@ -3635,6 +3649,7 @@
 	<item drawable="db_navigator" />
 	<item drawable="db_streckenagent" />
 	<item drawable="dc_comics" />
+	<item drawable="dc_ot_campus_recreation" />
 	<item drawable="dcard" />
 	<item drawable="dcinside" />
 	<item drawable="dcoder" />
@@ -3952,6 +3967,7 @@
 	<item drawable="duolingo_streak" />
 	<item drawable="durak_online" />
 	<item drawable="duranno" />
+	<item drawable="durham_waste" />
 	<item drawable="dutch_bros" />
 	<item drawable="dvb_mobil" />
 	<item drawable="dvd" />
@@ -4534,6 +4550,7 @@
 	<item drawable="freezeyou" />
 	<item drawable="freshcaller" />
 	<item drawable="freshchat" />
+	<item drawable="freshco" />
 	<item drawable="freshdesk" />
 	<item drawable="freshrss" />
 	<item drawable="fretello" />
@@ -8006,6 +8023,7 @@
 	<item drawable="reserve" />
 	<item drawable="resicon_adaptive" />
 	<item drawable="resicon_flat" />
+	<item drawable="resident_portal" />
 	<item drawable="residualvm" />
 	<item drawable="resilio_sync" />
 	<item drawable="resplash" />
