Fix componentinfo for LibChecker & chromium

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -360,4 +360,8 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="Leilei332"
+        image="https://avatars.githubusercontent.com/u/70204468"
+        link="https://github.com/Leilei332"/>
 </resources>
