--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -707,7 +707,7 @@
 	<item component="ComponentInfo{com.absi.tfctv/com.absi.tfctv.MainActivity}" drawable="iwanttfc" />
 	<item component="ComponentInfo{com.absinthe.anywhere_/com.absinthe.anywhere_.MainAliasActivity}" drawable="anywhere" />
 	<item component="ComponentInfo{com.absinthe.libchecker/com.absinthe.libchecker.ui.main.MainActivity}" drawable="libchecker" />
-    <item component="ComponentInfo{com.absinthe.libchecker/com.absinthe.libchecker.features.home.ui.MainActivit}" drawable="libchecker" />
+    <item component="ComponentInfo{com.absinthe.libchecker/com.absinthe.libchecker.features.home.ui.MainActivity}" drawable="libchecker" />
 	<item component="ComponentInfo{com.abstractart.music_racer/com.unity3d.player.UnityPlayerActivity}" drawable="music_racer" />
 	<item component="ComponentInfo{com.abtnprojects.ambatana/com.abtnprojects.ambatana.presentation.productlist.ProductListActivity}" drawable="letgo" />
 	<item component="ComponentInfo{com.abtnprojects.ambatana/com.abtnprojects.ambatana.ui.activities.ProductListingActivity}" drawable="letgo" />
