--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -31,6 +31,7 @@
 	<item drawable="shizutools" />
 	<item drawable="transit_manifesto" />
 	<item drawable="wifilist" />
+	<item drawable="databackup" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -149,6 +150,7 @@
 	<item drawable="dantotsu_alt_1" />
 	<item drawable="dashchan_alt_1" />
 	<item drawable="dashlane_alt_1" />
+	<item drawable="databackup_alt_1" />
 	<item drawable="deezer_alt_1" />
 	<item drawable="delivering_hope_alt_1" />
 	<item drawable="delta_alt_1" />
