Add Futo Keyboard icon, fix Numberhub and Revanced Manager (Debug) icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -28,6 +28,7 @@
 	<item drawable="flight_centre_mastercard" />
 	<item drawable="forest_ebike_sharing" />
 	<item drawable="freshco" />
+	<item drawable="futo_keyboard" />
 	<item drawable="glassdown" />
 	<item drawable="gohenry" />
 	<item drawable="google_gemini_alt_1" />
@@ -42,6 +43,7 @@
 	<item drawable="meditationtimer" />
 	<item drawable="mupdf" />
 	<item drawable="my_benefits" />
+	<item drawable="numberhub" />
 	<item drawable="ollama" />
 	<item drawable="plexus" />
 	<item drawable="resident_portal" />
@@ -4643,6 +4645,7 @@
 	<item drawable="fusion_360" />
 	<item drawable="futbin" />
 	<item drawable="futo_voice_input" />
+	<item drawable="futo_keyboard" />
 	<item drawable="futurama" />
 	<item drawable="fwallet" />
 	<item drawable="fx" />
@@ -7057,6 +7060,7 @@
 	<item drawable="nubank" />
 	<item drawable="nuinvest" />
 	<item drawable="num" />
+	<item drawable="numberhub" />
 	<item drawable="numbrs" />
 	<item drawable="numworks" />
 	<item drawable="nunti" />
