--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -246,6 +246,7 @@
 	<item component="ComponentInfo{app.revanced.android.apps.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity}" drawable="youtube_music_revanced" />
 	<item component="ComponentInfo{app.revanced.android.gms/org.microg.gms.ui.SettingsActivity}" drawable="microg_settings" />
 	<item component="ComponentInfo{app.revanced.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity}" drawable="youtube_revanced" />
+	<item component="ComponentInfo{app.revanced.manager.flutter.debug/app.revanced.manager.flutter.MainActivity}" drawable="revanced_manager"/>
 	<item component="ComponentInfo{app.revanced.manager.flutter/app.revanced.manager.flutter.MainActivity}" drawable="revanced_manager" />
 	<item component="ComponentInfo{app.revanced.manager/app.revanced.manager.MainActivity}" drawable="revanced_manager" />
 	<item component="ComponentInfo{app.sarhne.com/app.sarhne.com.Start}" drawable="sarhne" />
@@ -12794,6 +12795,7 @@
 	<item component="ComponentInfo{com.habitnow/com.habit.now.apps.activities.splashActivity.StartingActivity}" drawable="habitnow" />
 	<item component="ComponentInfo{com.gojek.gopay/com.gojek.gopay.MainActivity}" drawable="gopay" />
 	<item component="ComponentInfo{cz.csas.georgego/at.beeone.george.SplashScreenActivity}" drawable="george_bank" />
+	<item component="ComponentInfo{org.futo.inputmethod.latin/org.futo.inputmethod.latin.uix.settings.SettingsActivity}" drawable="futo_keyboard"/>
 	<item component="ComponentInfo{org.futo.voiceinput/org.futo.voiceinput.settings.SettingsActivity}" drawable="futo_voice_input" />
 	<item component="ComponentInfo{ru.ftc.tc/io.flutter.embedding.android.FlutterFragmentActivity}" drawable="ftc" />
 	<item component="ComponentInfo{com.etisalat.flous/com.etisalat.flous.MainActivity}" drawable="etisalat_cash" />
@@ -12893,6 +12895,7 @@
 	<item component="ComponentInfo{com.d4rk.lowbrightness/com.d4rk.lowbrightness.MainActivity}" drawable="low_brightness" />
 	<item component="ComponentInfo{com.rtbishop.look4sat/com.rtbishop.look4sat.presentation.MainActivity}" drawable="look4sat" />
 	<item component="ComponentInfo{app.myzel394.locus/app.myzel394.locus.MainActivity}" drawable="locus" />
+	<item component="ComponentInfo{app.myzel394.numberhub/app.myzel394.numberhub.MainActivity}" drawable="numberhub"/>
 	<item component="ComponentInfo{com.artemchep.literaryclock/com.artemchep.literaryclock.ui.activities.MainActivity}" drawable="literary_clock" />
 	<item component="ComponentInfo{com.github.librerandonaut.librerandonaut/com.github.librerandonaut.librerandonaut.MainActivity}" drawable="librerandonaut" />
 	<item component="ComponentInfo{com.my.kizzy/com.my.kizzy.MainActivity}" drawable="kizzy" />
