--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -106,6 +106,7 @@
 	<item drawable="wifi_mouse" />
 	<item drawable="wifilist" />
 	<item drawable="wikidex_net" />
+	<item drawable="open_in_whatsapp" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -491,6 +492,7 @@
 	<item drawable="openboard_alt_1" />
 	<item drawable="openfoodfacts_alt_1" />
 	<item drawable="openreads_alt_1" />
+	<item drawable="open_in_whatsapp_alt_1" />
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
